# feintrack

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  license.text  main.cpp
docs/papers/: [notes].doc
docs/papers/patent/: readme
src/: FeintrackManager.cpp  FeintrackManager.h  HungarianAlg.cpp  HungarianAlg.h  LeftObject.cpp  LeftObject.h  StaticLeftDetector.cpp  StaticLeftDetector.h  bgrnd_substr.cpp  bgrnd_substr.h  feintrack.cpp  feintrack.h  feintrack_d.cu  feintrack_d.h  feintrack_dll.cpp  feintrack_dll.h  feintrack_objects.cpp  feintrack_objects.h  feintrack_params.h  left_objects_detector.cpp  left_objects_detector.h  objects_tracker.cpp  objects_tracker.h  recognition.cpp  recognition.h  segmentation.cpp  segmentation.h  some_types.h  utils.cpp  utils.h
